--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "date-and-time": "^3.3.0",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
